--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -81,7 +81,7 @@
   vertical-align: top;
   width: 36px;
   // set width only, for non-square avatars
-  // height: 36px;
+  height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -90,13 +90,13 @@
   }
 
   img {
-    /* max-width: 175px; */
+    max-width: 175px;
     border-radius: 50%;
 
-    /* @include breakpoint($large) {       */
-    /*   padding: 5px;                     */
-    /*   border: 1px solid $border-color;  */
-    /* }                                   */
+    @include breakpoint($large) {
+      padding: 5px;
+      border: 1px solid $border-color;
+    }
   }
 }
 
