--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -91,7 +91,7 @@
 
   img {
     max-width: 175px;
-    // border-radius: 50%;
+    // border-radius: 50%;  // Makes the image circular, only if the image is rectangular.
 
     @include breakpoint($large) {
       padding: 5px;
